Simplify vehicle type flows and clean UI